--- a/src/main/resources/templates/index.tecnico.html
+++ b/src/main/resources/templates/index.tecnico.html
@@ -75,6 +75,7 @@
                             <td>
                             </td>
                             <td>
+                                <label th:each="optionPrioridade : ${selectPrioridadeOptions}"></label>
                                 <select id="status" name="status">
                                     <option value="em-analise">Em análise</option>
                                     <option value="aguardando">Aguardando técnico</option>
