--- a/src/main/resources/static/styles/index-usuario.css
+++ b/src/main/resources/static/styles/index-usuario.css
@@ -5,11 +5,12 @@
 }
 
 :root {
-
-  --primeira-cor: #c6c3c3;
-  --segunda-cor: #ffffff;
-  --black-cor: #000000;
-  --hover-cor: rgb(245, 207, 242);
+    --primeira-cor:#03e9f4;
+    --segunda-cor: #fff;
+    --fonte-secundaria: "Orbitron", sans-serif;
+    --background-container: radial-gradient(100% 100% at bottom center,
+                                        rgb(145, 32, 138),
+                                        rgb(18, 28, 90), rgb(145, 32, 138));
 }
 
 body {
@@ -39,8 +40,8 @@ body {
   max-width: 5rem;
   height: auto;
   border-radius: 100px;
-  box-shadow: 1px 0 1px #03e9f4, 0 0 5px #03e9f4, 0 0 10px #03e9f4,
-    0 0 550px #03e9f4;
+  box-shadow: 1px 0 1px var(--primeira-cor), 0 0 5px var(--primeira-cor), 0 0 10px var(--primeira-cor),
+    0 0 550px var(--primeira-cor);
 }
 
 .cabecalhoMenu {
@@ -48,10 +49,10 @@ body {
 }
 
 .titulo {
-  font-family: "Orbitron", sans-serif;
+  font-family: var(--fonte-secundaria);
   letter-spacing: 5rem;
-  color: #03e9f4;
-  text-shadow: 0 0 29px #03e9f4;
+  color: var(--primeira-cor);
+  text-shadow: 0 0 29px var(--primeira-cor);
   flex-grow: 1;
   text-align: center;
 }
@@ -61,7 +62,7 @@ body {
   position: relative;
   display: inline-block;
   padding: 10px 20px;
-  color: #03e9f4;
+  color: var(--primeira-cor);
   font-size: 16px;
   text-decoration: none;
   text-transform: uppercase;
@@ -72,11 +73,11 @@ body {
 }
 
 .cabecalhoMenu a:hover {
-  background: #03e9f4;
+  background: var(--primeira-cor);
   color: #f1eee6;
   border-radius: 5px;
-  box-shadow: 0 0 10px #03e9f4, 0 0 50px #03e9f4, 0 0 100px #03e9f4,
-    0 0 200px #03e9f4;
+  box-shadow: 0 0 10px var(--primeira-cor), 0 0 50px var(--primeira-cor), 0 0 100px var(--primeira-cor),
+    0 0 200px var(--primeira-cor);
 }
 
 .cabecalhoMenu a span {
@@ -89,7 +90,7 @@ body {
   left: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(90deg, transparent, #03e9f4);
+  background: linear-gradient(90deg, transparent, var(--primeira-cor));
   animation: btn-anim1 1s linear infinite;
 }
 
@@ -97,8 +98,7 @@ body {
   0% {
     left: -100%;
   }
-  50%,
-  100% {
+  50%, 100% {
     left: 100%;
   }
 }
@@ -108,7 +108,7 @@ body {
   right: 0;
   width: 2px;
   height: 100%;
-  background: linear-gradient(180deg, transparent, #03e9f4);
+  background: linear-gradient(180deg, transparent, var(--primeira-cor));
   animation: btn-anim2 1s linear infinite;
   animation-delay: 0.25s;
 }
@@ -117,8 +117,7 @@ body {
   0% {
     top: -100%;
   }
-  50%,
-  100% {
+  50%, 100% {
     top: 100%;
   }
 }
@@ -128,7 +127,7 @@ body {
   right: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(270deg, transparent, #03e9f4);
+  background: linear-gradient(270deg, transparent, var(--primeira-cor));
   animation: btn-anim3 1s linear infinite;
   animation-delay: 0.5s;
 }
@@ -137,8 +136,7 @@ body {
   0% {
     right: -100%;
   }
-  50%,
-  100% {
+  50%, 100% {
     right: 100%;
   }
 }
@@ -148,7 +146,7 @@ body {
   left: 0;
   width: 2px;
   height: 100%;
-  background: linear-gradient(360deg, transparent, #30e9f4);
+  background: linear-gradient(360deg, transparent, var(--primeira-cor));
   animation: btn-anim4 1s linear infinite;
   animation-dealy: 0.75s;
 }
@@ -157,12 +155,10 @@ body {
   0% {
     bottom: -100%;
   }
-  50%,
-  100% {
+  50%, 100% {
     bottom: 100%;
   }
 }
-
 
 .header {
   position: absolute;
@@ -181,27 +177,24 @@ body {
 .container-box {
   position: fixed;
   width: 450px;
-  height: 400px; /* Ajustando a altura para 400px */
-
+  height: 400px;
   backdrop-filter: blur(25px);
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
   padding: 7.5em 2.5em 2em 2.5em;
   color: var(--segunda-cor);
-  background: radial-gradient(100% 100% at bottom center,
-      rgb(145, 32, 138),
-      rgb(18, 28, 90), rgb(145, 32, 138));
+  background: var(--background-container);
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
 }
 
 .container-texto {
-font-family:"Orbitron", sans-serif;
+font-family:var(--fonte-secundaria);
    font-size: 3rem;
    color: rgb(9, 26, 79);
-   -webkit-text-stroke: 0.5px#03e9f4;
-   text-stroke: 0.5px #03e9f4;
+   -webkit-text-stroke: 0.5px var(--primeira-cor);
+   text-stroke: 0.5px var(--primeira-cor);
   text-align: center;
   margin-top: -10%;
   margin-bottom: 20px;
@@ -209,18 +202,16 @@ font-family:"Orbitron", sans-serif;
 
 .campo-container {
     display: flex;
-    flex-direction: column; /* Altera a direção do flex container para coluna */
+    flex-direction: column;
 }
 
 .vizualizar-chamados,
 .novo-chamado {
-    margin-bottom: 20px; /* Adiciona margem inferior entre os itens */
+    margin-bottom: 20px;
 }
 
-
-
 .footer {
-  font-family: "Orbitron", sans-serif;
+  font-family: var(--fonte-secundaria);
   background: radial-gradient(
     100% 100% at top center,
     rgb(145, 32, 138),
@@ -246,15 +237,15 @@ font-family:"Orbitron", sans-serif;
 }
 
 .footer a {
-  color: #03e9f4;
+  color:var(--primeira-cor);
   text-decoration: none;
   margin-right: 10px;
 }
 
 .footer a:hover {
-  background: #03e9f4;
-  color: #f1eee6;
+  background: var(--primeira-cor);
+  color: var(--segunda-cor);
   border-radius: 2px;
-  box-shadow: 0 0 50px #03e9f4;
+  box-shadow: 0 0 50px var(--primeira-cor);
   padding: 5px;
 }
