--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -80,6 +80,7 @@
                         <div>
                             <label for="email">E-mail</label>
                             <input type="email" id="email" th:value="${email}" class="input-email" name="email"
+                                   required
                                    placeholder="Digite seu e-mail:"/>
                         </div>
 
@@ -87,6 +88,7 @@
                             <label for="password">Senha</label> <!-- Rótulo do campo senha -->
                             <input type="password" id="password" th:value="${senha}" class="input-senha"
                                    name="senha"
+                                   required
                                    placeholder="Digite sua senha:"/>
 
                         </div>
