--- a/src/main/resources/templates/usuario.novo.chamado.html
+++ b/src/main/resources/templates/usuario.novo.chamado.html
@@ -59,7 +59,7 @@
                 <h2 class="container-subtitulo">Criar novo chamado</h2>
 
                 <div class="campo-container">
-                    <form action="/salvarChamado" method="post">
+                    <form action="/usuario/novo/chamado" method="post">
                         <div class="descricao">
                             <div class="">
                                 <span class="input-group-text">Descrição</span>
