--- a/src/main/resources/templates/usuario.chamados.html
+++ b/src/main/resources/templates/usuario.chamados.html
@@ -64,7 +64,7 @@
 <!--                            <td th:text="${chamado.dt_abertura}">Data Abertura</td>-->
                             <td th:text="${dtFormatada}">Data Abertura</td>
                             <td th:text="${chamado.id_usuario.nome}">Usuario</td>
-                            <td th:text="${chamado.id_usuario.setor.nome}">Setor</td>-->
+                            <td th:text="${chamado.id_usuario.setor.nome}">Setor</td>
                             <td th:text="${chamado.id_prioridade.nome}">Prioridade</td>
                             <td th:text="${chamado.descricao}">Descrição</td>
                             <td th:text="${chamado.dt_fim}">Data Fim</td>
