--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -102,14 +102,13 @@
 
                     <div id="setorDiv" style="display: none">
 <!--                                <label for="setor"  name="setor" id="setor" class="setor">Setor:</label>-->
-<!--                        <label for="setor" name="setor" id="setor" class="setor">Setor:</label>-->
-<!--                        <select  th:each="optionSetor : ${listOfOptions}"></select>-->
-<!--                        <select name="setor" >-->
-<!--                            <option th:value="${optionSetor}" th:text="${optionSetor}" th:checked="${optionSetor == 'Administrativo'}"></option>-->
-<!--                            <option value="Marketing" th:value="${Marketing}" th:checked="${optionSetor == 'Marketing'}">Marketing</option>-->
-<!--                            <option value="Recursos Humanos" th:value="${Recursos Humanos}" th:checked="${optionSetor == 'Recursos Humanos'}">Recursos Humanos</option>-->
-<!--                            <option value="Suporte" th:value="${Suporte" th:checked="${optionSetor == 'Suporte'}">Suporte</option>-->
-<!--                        </select>-->
+                        <label for="setor" name="setor" id="setor" class="setor">Setor:</label>
+                        <select name="setor" >
+                            <option value="Administrativo" name="setor"></option>
+                            <option value="Marketing" name="setor">Marketing</option>
+                            <option value="Recursos Humanos" name="setor">Recursos Humanos</option>
+                            <option value="Suporte" name="setor">Suporte</option>
+                        </select>
 
                     </div>
                     </fieldset>
