--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -102,13 +102,14 @@
 
                     <div id="setorDiv" style="display: none">
 <!--                                <label for="setor"  name="setor" id="setor" class="setor">Setor:</label>-->
-                        <label for="setor" name="setor" id="setor" class="setor">Setor:</label>
+                        <label for="setor" name="setor" id="setor" class="setor">Setor:
                         <select name="setor" >
-                            <option value="Administrativo" name="setor"></option>
+                            <option value="Administrativo" name="setor">Administrativo</option>
                             <option value="Marketing" name="setor">Marketing</option>
                             <option value="Recursos Humanos" name="setor">Recursos Humanos</option>
                             <option value="Suporte" name="setor">Suporte</option>
                         </select>
+                        </label>
 
                     </div>
                     </fieldset>
