--- a/src/main/resources/templates/usuario.chamados.html
+++ b/src/main/resources/templates/usuario.chamados.html
@@ -29,7 +29,7 @@
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
-        <a href="/">
+        <a href="/login">
             <span></span>
             <span></span>
             <span></span>
