--- a/src/main/resources/templates/tela.usuario.html
+++ b/src/main/resources/templates/tela.usuario.html
@@ -47,7 +47,7 @@
         <main class="container-form">
 
             <section class="container-box">
-                <h1 class="container-texto" th:text="'Bem-vindo, ' + ${userName} + '!'">Bem-vindo(a)!</h1>
+                <h1 class="container-texto" th:text="'Bem-vindo(a), ' + ${userOn.nome} + '!'">Bem-vindo(a)!</h1>
 
                 <div class="campo-container">
 
