--- a/src/main/resources/templates/usuario.novo.chamado.html
+++ b/src/main/resources/templates/usuario.novo.chamado.html
@@ -49,12 +49,8 @@
     <div class="container">
         <main class="container-form">
             <section class="container-box">
-                <h1
-                        class="container-texto"
-                        th:text="'Bem-vindo, ' + ${userName} + '!'"
-                >
-                    Bem-vindo(a)!
-                </h1>
+
+                <h1 class="container-texto" th:text="'Bem-vindo(a), ' + ${userOn.nome} + '!'">Bem-vindo(a)!</h1>
 
                 <h2 class="container-subtitulo">Criar novo chamado</h2>
 
@@ -91,15 +87,15 @@
                         </div>
                         <div class="data">
                             <div class="data-inicio">
-                                <label for="dataInicio" class="input-group-text"
+                                <label for="dtInicio" class="input-group-text"
                                 >Data da abertura do chamado</label
                                 >
                             </div>
                             <input
                                     type="text"
                                     class="form-control"
-                                    id="dataInicio"
-                                    name="dataInicio"
+                                    id="dtInicio"
+                                    name="dtInicio"
                                     placeholder="DD-MM-AAAA"
                             />
                         </div>
@@ -110,9 +106,9 @@
                             </div>
                             <select class="form-control" id="setor" name="setor">
                                 <option value="" disabled selected>Escolha o Setor</option>
-                                <option value="Administrativo">Financeiro</option>
-                                <option value="Marketing">Financeiro</option>
-                                <option value="Recursos Humanos">Administrativo</option>
+                                <option value="Administrativo">Administrativo</option>
+                                <option value="Marketing">Marketing</option>
+                                <option value="Recursos Humanos">Recursos Humanos</option>
                                 <option value="Suporte">Suporte</option>
                             </select>
                         </div>
