--- a/src/main/resources/templates/usuario.chamados.html
+++ b/src/main/resources/templates/usuario.chamados.html
@@ -43,7 +43,7 @@
     <div class="container">
         <main class="container-form">
             <section class="container-box">
-                <h1 class="container-texto" th:text="'Bem-vindo, ' + ${userOn} + '!'">Bem-vindo(a)!</h1>
+                <h1 class="container-texto" th:text="'Bem-vindo(a), ' + ${userOn.nome} + '!'">Bem-vindo(a)!</h1>
                 <h2 class="container-subtitulo">Chamados Criados</h2>
                 <div class="tabela-container">
                     <table class="tabela">
@@ -55,21 +55,24 @@
                             <th>Prioridade</th>
                             <th>Descrição</th>
                             <th>Data da Finalização</th>
+                            <th>Excluir</th>
                         </tr>
                         </thead>
                         <tbody>
-  
 
-                        <tr th:each="chamado : ${chamados}">
-<!--                            <td th:text="${chamado.dt_abertura}">Data Abertura</td>-->
-                            <td th:text="${dtFormatada}">Data Abertura</td>
+                        <tr th:each="chamado, i : ${chamados}">
+                            <td th:text="${dtFormatada[i.index]}">Data Abertura</td>
                             <td th:text="${chamado.id_usuario.nome}">Usuario</td>
                             <td th:text="${chamado.id_usuario.setor.nome}">Setor</td>
                             <td th:text="${chamado.id_prioridade.nome}">Prioridade</td>
                             <td th:text="${chamado.descricao}">Descrição</td>
                             <td th:text="${chamado.dt_fim}">Data Fim</td>
-
-                            <td><a th:href="@{'/usuario/chamados/' + ${chamado.id}}">Detalhes</a></td>
+                            <td>
+                            <form th:action="@{/usuario/chamado/{id}/excluir(id=${chamado.id})}" method="post" id="deleteForm">
+                                <input type="hidden" name="id" th:value="${chamado.id}" />
+                                <button type="submit" class="botao-excluir">excluir</button>
+                            </form>
+                            </td>
 
                         </tr>
 
