--- a/src/main/resources/templates/usuario.novo.chamado.html
+++ b/src/main/resources/templates/usuario.novo.chamado.html
@@ -85,20 +85,6 @@
                                 <option value="baixa">Baixa</option>
                             </select>
                         </div>
-                        <div class="data">
-                            <div class="data-inicio">
-                                <label for="dtInicio" class="input-group-text"
-                                >Data da abertura do chamado</label
-                                >
-                            </div>
-                            <input
-                                    type="text"
-                                    class="form-control"
-                                    id="dtInicio"
-                                    name="dtInicio"
-                                    placeholder="DD-MM-AAAA"
-                            />
-                        </div>
 
                         <div class="">
                             <div class="setor">
@@ -112,17 +98,13 @@
                                 <option value="Suporte">Suporte</option>
                             </select>
                         </div>
-                        <div class="">
-                            <div class="status">
-                                <span class="input-group-text">Status</span>
+                        <div class="data">
+                            <div class="data_abertura">
+                                <label for="data_abertura" id="data_abertura" class="input-group-text campo label"
+                                >Data da abertura do chamado</label
+                                >
                             </div>
-                            <select
-                                    class="form-control"
-                                    id="chamadoStatus"
-                                    name="chamadoStatus"
-                            >
-                                <option value="Aguardando">Aguardando Atendimento</option>
-                            </select>
+                            <div class="data-abertura-atual" th:text="${#dates.format(#dates.createNow(), 'dd/MM/yyyy')}"></div>
                         </div>
                         <div class="container-input-cadastrar">
 
